--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/css/font.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loading Page</title>
@@ -9,7 +10,7 @@
 <body>
     <div class="loader-container">
         <div class="loader"></div>
-        <p>Loading... Please wait</p>
+        <p>加载中... 请耐心等待</p>
     </div>
 
     <script>
